--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -4,10 +4,11 @@
   
   .app-header h1 {
     flex-grow: 1;
-  }
+    color: royalblue;
+    }
   
   .app-header h2 {
     font-size: 1.2rem;
-    color: grey;
+    color: navy;
   }
   
